RbA Build/src/objects/Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Measurement_Fractions__c</fullName>
        <description>The fractions that should be made available for all measurements in the product config.</description>
        <inlineHelpText>The fractions that should be made available for all measurements in the product config.</inlineHelpText>
        <label>Measurement Fractions</label>
        <picklist>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mfg_Mull_Sequence_Control__c</fullName>
        <description>Controls whether Mfg Mull Sequence is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Mfg Mull Sequence is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Mfg Mull Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Height__c</fullName>
        <description>The minimum height for the makeability exception rules.</description>
        <inlineHelpText>The minimum height for the makeability exception rules.</inlineHelpText>
        <label>Min Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Width__c</fullName>
        <description>The minimum width for the makeability exception rules.</description>
        <inlineHelpText>The minimum width for the makeability exception rules.</inlineHelpText>
        <label>Min Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Leg_Height__c</fullName>
        <label>Minimum Leg Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mull_Sequence_Mullion_Control__c</fullName>
        <description>Controls whether Mull Sequence Mullion is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Mull Sequence Mullion is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Mull Sequence Mullion Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mull_Sequence_Mullion__c</fullName>
        <description>Choose the options that should be available as mull sequence mullions for this product.</description>
        <inlineHelpText>Choose the options that should be available as mull sequence mullions for this product.</inlineHelpText>
        <label>Mull Sequence Mullion</label>
        <picklist>
            <picklistValues>
                <fullName>201: a-b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>202: a/b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301: a-b-c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>302: a/b/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>303: a-(b/c)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>304: (a/b)-c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305: a/(b-c)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>306: (a-b)-c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401: a-b-c-d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>402: a/b/c/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>403: (a-b)/(c-d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>404: a-(b/c/d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>405: (a/b/c)-d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>406: a/(b-c-d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>407: (a-b-c)/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>408: a/b/(c-d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>409: a/(b-c)/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>410: (a-b)/c/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>411: a-b-(c/d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>412: a-(b/c)-d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>413: (a/b)-c-d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501: a-b-c-d-e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>502: a/b/c/d/e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>503: a-(b/c/d/e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>504: (a/b/c/d)-e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>505: a/(b-c-d-e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>506: (a-b-c-d)/e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>507: a/b/(c-d-e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>508: a/(b-c-d)/e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>509: (a-b-c)/d/e</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Sashes__c</fullName>
        <description>Select the number of sashes included in the product.</description>
        <inlineHelpText>Select the number of sashes included in the product.</inlineHelpText>
        <label>Number of Sashes</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_of_Bay_Control__c</fullName>
        <description>Controls whether Part of Bay is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Part of Bay is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Part of Bay</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_of_Bow_Control__c</fullName>
        <description>Controls whether Part of Bow is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Part of Bow is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Part of Bow</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Peak_Height__c</fullName>
        <label>Peak Height</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perm_App_Int_Wood_Grille_Control__c</fullName>
        <description>Controls whether Permanently Applied Interior Wood Grille is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Permanently Applied Interior Wood Grille is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Perm App Int Wood Grille</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Right_Leg_Fraction_Control__c</fullName>
        <description>Controls whether Right Leg Fraction is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Right Leg Fraction is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Right Leg Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Right_Leg_Inches_Control__c</fullName>
        <description>Controls whether Right Leg is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Right Leg is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Right Leg Inches</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room_Control__c</fullName>
        <description>Controls whether Room s required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Room s required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Room Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sash_Operation_Control__c</fullName>
        <description>Controls whether Sash Operation is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Sash Operation is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Sash Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sash_Operation__c</fullName>
        <description>Select the Sash Operations that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Sash Operations that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Sash Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Vent/Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary/Right Vent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Vent/Stat/Stat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stat/Stat/Right Vent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active/Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active/Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary/Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive/Active</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sash_Ratio_Control__c</fullName>
        <description>Controls whether Sash Ratio is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Sash Ratio is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Sash Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sash_Ratio__c</fullName>
        <description>Select the Sash Ratios that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Sash Ratios that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Sash Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Screen_Color__c</fullName>
        <description>Select the Screen Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Screen Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Screen Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Screen_Type_Control__c</fullName>
        <description>Controls whether Screen Type is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Screen Type is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Screen Type</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screen_Type__c</fullName>
        <description>Select the options for screen type that you want to make available for this product configuration.</description>
        <inlineHelpText>Select the options for screen type that you want to make available for this product configuration.</inlineHelpText>
        <label>Screen Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fiberglass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiberglass (1/2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum (1/2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum Dual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TruScene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TruScene (1/2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TruScene (Wood Vaneer)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Screen_Vaneer_Type_Control__c</fullName>
        <description>Controls whether Screen Vaneer Type is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Screen Vaneer Type is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Screen Vaneer Type Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screen_Vaneer_Type__c</fullName>
        <description>Select the screen vaneer types that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the screen vaneer types that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Screen Vaneer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sill_Angle_Control__c</fullName>
        <description>Controls whether Sill Angle is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Sill Angle is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Sill Angle</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sill_Angle__c</fullName>
        <description>Select the Sill Angles that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Sill Angles that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Sill Angle</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Special_Options_Control__c</fullName>
        <description>Controls whether Special Options is enabled or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Special Options is enabled or disabled for this product configuration.</inlineHelpText>
        <label>Special Options</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialty_Width_to_Height_Ratio_Max__c</fullName>
        <label>Specialty Width to Height Ratio Max</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty_Width_to_Height_Ratio_Min__c</fullName>
        <label>Specialty Width to Height Ratio Min</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spokes_Control__c</fullName>
        <description>Controls whether Spokes are required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Spokes are required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Spokes Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storm_Window_Color__c</fullName>
        <description>Select the Storm Window Colors that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Storm Window Colors that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Storm Window Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SN?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Storm_Window_Control__c</fullName>
        <description>Controls whether Storm Window is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Storm Window is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Storm Window Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storm_Window_Style_Control__c</fullName>
        <description>Controls whether Storm Window Style is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Storm Window Style is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Storm Window Style Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storm_Window_Style__c</fullName>
        <description>Select the Storm Window Styles that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Storm Window Styles that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Storm Window Style</label>
        <picklist>
            <picklistValues>
                <fullName>M170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M504</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M505</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M603</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M604</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>..more</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Storm_Window__c</fullName>
        <description>Select the Storm Windows that should be made available for selection in the product configuration page.</description>
        <inlineHelpText>Select the Storm Windows that should be made available for selection in the product configuration page.</inlineHelpText>
        <label>Storm Window</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Qualified_Control__c</fullName>
        <description>Controls whether Tax Credit Qualified is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Tax Credit Qualified is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Tax Credit Qualified Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tempered_Control__c</fullName>
        <description>Controls whether Tempered is required, enabled, or disabled for this product configuration.</description>
        <inlineHelpText>Controls whether Tempered is required, enabled, or disabled for this product configuration.</inlineHelpText>
        <label>Tempered Control</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>